--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,12 @@ a {
 
 #index-wrapper{
     width: 1000px;
-    height: 1000px;
+    /* height: 1000px; */
     margin: 0 auto;
+    width: 1000px;
+    height: 491px;
+    background-color: #111111;
+    display: flex;
 }
 
 
@@ -25,6 +29,19 @@ a {
     width: 1400px;
     height: 2000px;
     margin: 0 auto;
+}
+
+/* .index-main{
+    width: 1000px;
+    height: 491px;
+    background-color: #111111;
+    display: flex;
+} */
+
+.layout2-main{
+    width: 1400px;
+    height: 1687px;
+    display: flex;
 }
 
 .index-header{
@@ -41,7 +58,7 @@ a {
     display: flex;
 }
 
-.logo{
+.index-header > div, .layout2-header > div{
     background: orange;
     color: orange;
     margin-top: 28px;
@@ -53,7 +70,7 @@ a {
     align-self: flex-start;
 }
 
-.index-nav{
+.index-header nav{
     width: 100%;
     height: 57px;
     display: flex;
@@ -61,7 +78,7 @@ a {
     align-self: flex-end;
 }
 
-.layout2-nav{
+#layout2-wrapper nav{
     width: 243px;
     height: 1687px;
     background-color:peachpuff;
@@ -71,7 +88,7 @@ ul{
     list-style-type: none;
 }
 
-.layout2-nav-li{
+#layout2-wrapper nav li{
     width: 237px;
     height: 135px;
     background-color: peachpuff;
@@ -79,12 +96,12 @@ ul{
     line-height: 135px;
 }
 
-.layout2-nav-li a{
+#layout2-wrapper nav li a{
         color: black;
 
 }
 
-.index-nav a{
+.index-header nav a{
     width: 242px;
     height: 57px;
     background-color:peachpuff;
@@ -93,29 +110,18 @@ ul{
     color: black;
     font-size: large;
 }
-
-    .index-nav .selected-nav, div.layout2-nav-li.selected-nav{
+.index-header a:hover, #layout2-wrapper li:hover{
+    background-color:burlywood;
+}
+.index-header .selected-nav, #layout2-wrapper .selected-nav{
     background-color:firebrick;
     color: white;
 }
 
-.index-nav a:hover, div.layout2-nav-li:hover{
-    background-color:burlywood;
-}
-.index-main{
-    width: 1000px;
-    height: 491px;
-    background-color: #111111;
-    display: flex;
-}
 
-.layout2-main{
-    width: 1400px;
-    height: 1687px;
-    display: flex;
-}
 
-.index-main div{
+
+#index-wrapper div{
     background-color: cornflowerblue;
 }
 
@@ -204,14 +210,14 @@ ul{
     margin-left: 25px;
 }
 
-.index-footer{
+.footer{
     width: 100%;
     height: 121px;
     background-color: grey;
 }
 
-.layout2-footer{
+/* .layout2-footer{
     width: 100%;
     height: 121px;
     background-color: grey;
-}
+} */
