--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,6 @@ a {
     margin: 0 auto;
 }
 
-/* .index-main{
-    width: 1000px;
-    height: 491px;
-    background-color: #111111;
-    display: flex;
-} */
 
 .layout2-main{
     width: 1400px;
@@ -132,12 +126,12 @@ ul{
     display: flex;
 }
 
-.layout2-main-left{
+.layout2-main-section .left{
     width: 368px;
     height: 1687px;
 }
 
-.layout2-main-right{
+.layout2-main-section .right{
     width: 450px;
     height: 1687px;
 }
@@ -166,7 +160,7 @@ ul{
     position: relative;
 }
 
-.layout2-aside-box-top{
+.layout2-aside-section .top{
     width: 128px;
     height: 338px;
     background-color:aquamarine;
@@ -176,7 +170,7 @@ ul{
     position: absolute;
 }
 
-.layout2-aside-box-bottom{
+.layout2-aside-section .bottom{
     width: 128px;
     height: 125px;
     background-color: aquamarine;
@@ -187,14 +181,14 @@ ul{
     position: absolute;
 }
 
-.index-box-1{
+.box-1{
     width: 93px;
     height: 33px;
     margin-top: 24px;
     margin-left: 28px; 
 }
  
-.index-box-2{
+.box-2{
     width: 335px;
     height: 389px;
     margin-top: 31px;
@@ -202,7 +196,7 @@ ul{
     display: block;
 }
 
-.index-box-3{
+.box-3{
     width: 338px;
     height: 338px;
     margin-top: 31px;
@@ -215,9 +209,3 @@ ul{
     height: 121px;
     background-color: grey;
 }
-
-/* .layout2-footer{
-    width: 100%;
-    height: 121px;
-    background-color: grey;
-} */
